--- a/demo/index.html
+++ b/demo/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <div id="__impala"><!--app-content--></div>
-    <script type="module" src="/src/entry-client.tsx"></script>
+    <script type="module" src="/src/entry-client"></script>
   </body>
 </html>
